feat(footer): Make current year dynamic

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -67,7 +67,7 @@
 
     <div class="footer-bottom">
       <p>
-        <a href="https://github.com/sjaindl" target="_blank">© 2018-2025 Stefan Jaindl</a>
+        <a href="https://github.com/sjaindl" target="_blank">© 2018-{{ currentYear }} Stefan Jaindl</a>
       </p>
     </div>
   </div>
