Remove hallenturnier from navigation

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -43,9 +43,9 @@
       <button mat-menu-item routerLink="/stadionfest" routerLinkActive="active">
         <span class="fa fa-futbol fa-sm"></span> Stadionfest
       </button>
-      <button mat-menu-item routerLink="/hallenturnier" routerLinkActive="active">
+      <!-- <button mat-menu-item routerLink="/hallenturnier" routerLinkActive="active">
         <span class="fa fa-futbol fa-sm"></span> Hallenturnier
-      </button>
+      </button> -->
 
       <button mat-menu-item [matMenuTriggerFor]="goaloftheseason">
         <span class="fa fa-list-ol fa-sm"></span> Tor des Jahres
@@ -171,9 +171,9 @@
       <button mat-menu-item routerLink="/stadionfest" routerLinkActive="active">
         <span class="fa fa-futbol fa-sm"></span> Stadionfest
       </button>
-      <button mat-menu-item routerLink="/hallenturnier" routerLinkActive="active">
+      <!-- <button mat-menu-item routerLink="/hallenturnier" routerLinkActive="active">
         <span class="fa fa-futbol fa-sm"></span> Hallenturnier
-      </button>
+      </button> -->
 
       <!-- <button mat-menu-item routerLink="/comedyhirten" routerLinkActive="active"><span class="fa fa-heart"></span> Comedyhirten</button> -->
       <!-- <button mat-menu-item routerLink="/10-jahre-hvtdp" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> 10-Jahresjubiläum</button>  -->
