feat: Update about page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -88,9 +88,7 @@
       <article class="achievement-card">
         <div class="achievement-icon"><span class="fa fa-medal fa-sm"></span></div>
         <div>
-          <h3 class="achievement-title">
-            Testspielerfolg gegen die Kampfmannschaft des SC Stainz
-          </h3>
+          <h3 class="achievement-title">Testspielerfolg gegen die Kampfmannschaft des SC Stainz</h3>
           <p class="achievement-meta">2015</p>
         </div>
       </article>
@@ -213,6 +211,22 @@
   <br />
 
   <div class="team-gallery">
+    <figure class="team-entry">
+      <h2 class="team-title">Mannschaftsfoto 2025</h2>
+      <app-hvtdp-image
+        class="team-image"
+        [imagePath]="'assets/images/aboutus/2025_Mannschaft.jpg'"
+        [altText]="'Mannschaftsfoto 2025'"
+      />
+    </figure>
+    <figure class="team-entry">
+      <h2 class="team-title">Mannschaftsfoto 2024</h2>
+      <app-hvtdp-image
+        class="team-image"
+        [imagePath]="'assets/images/aboutus/2024_Mannschaft.jpg'"
+        [altText]="'Mannschaftsfoto 2024'"
+      />
+    </figure>
     <figure class="team-entry">
       <h2 class="team-title">Mannschaftsfoto 2023</h2>
       <app-hvtdp-image
