--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -71,9 +71,10 @@
       <!-- <button mat-menu-item routerLink="/torschusschallenge-voting" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge </button> -->
 
       <button mat-menu-item [matMenuTriggerFor]="gallery">
-        <span class="fa fa-camera fa-sm"></span> Galerie
+        <span class="fa fa-camera fa-sm"></span> Fotos
       </button>
       <mat-menu #gallery="matMenu">
+        <button mat-menu-item routerLink="/gallery/2026">2026</button>
         <button mat-menu-item routerLink="/gallery/2025">2025</button>
         <button mat-menu-item routerLink="/gallery/2024">2024</button>
         <button mat-menu-item routerLink="/gallery/2023">2023</button>
@@ -181,9 +182,10 @@
       <!-- <button mat-menu-item routerLink="/torschusschallenge-voting" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge </button> -->
 
       <button mat-menu-item [matMenuTriggerFor]="gallery">
-        <span class="fa fa-camera fa-sm"></span> Galerie
+        <span class="fa fa-camera fa-sm"></span> Fotos
       </button>
       <mat-menu #gallery="matMenu">
+        <button mat-menu-item routerLink="/gallery/2026">2026</button>
         <button mat-menu-item routerLink="/gallery/2025">2025</button>
         <button mat-menu-item routerLink="/gallery/2024">2024</button>
         <button mat-menu-item routerLink="/gallery/2023">2023</button>
